# ttail

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/skills/version-bump/: SKILL.md
.github/workflows/: publish.yml  release.yml  rust.yml  tag-release.yml
benches/: line_buffer.rs
scripts/ci/: build.sh  check_version.sh  publish.sh
scripts/dev/: bench.sh  gen_colored_logs.sh  gen_logs.sh
src/: display.rs  event.rs  interactive.rs  lib.rs  main.rs  pipe.rs  pty.rs  term.rs
tests/: integration.rs
