[package]
name = "ttail"
version = "0.3.2"
edition = "2024"
authors = ["Dmitri Tchebotarev <dmitri@tchebotarev.com>"]
license = "MIT"
description = "Small program to display last N lines of output."
repository = "https://github.com/DTchebotarev/ttail"
homepage = "https://github.com/DTchebotarev/ttail"
readme = "README.md"
keywords = ["terminal", "tail", "log", "cli", "buffer"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[dependencies]
libc = "0.2"
signal-hook = "0.3"

[[bench]]
name = "line_buffer"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
